--- a/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
@@ -42,8 +42,8 @@
                 <div>
                     <p class="text-sm text-gray-500">Stato</p>
                     {% if reclamo.risolto == True %}
-                        <span class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-medium bg-red-100 text-red-700">
-                            Aperto
+                        <span class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-medium bg-green-100 text-green-700">
+                            Risolto
                         </span>
                     {% elif reclamo.risolto == False %}
                         <span class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-medium bg-yellow-100 text-yellow-700">
@@ -57,27 +57,35 @@
                 </div>
 
                 <!-- Tipologia -->
-                <div>
-                    <p class="text-sm text-gray-500">Tipologia</p>
-                    <p class="text-lg font-semibold text-gray-900">
-                        {{ reclamo.evento.nomeEvento }}
+                <div >
+                    <p class="text-sm text-gray-500">Categoria</p>
+                    <p class="text-lg font-semibold text-gray-900 ">
+                        {{ reclamo.evento1.nomeEvento }}
                     </p>
+                    {% if reclamo.evento1 != None %}
+                    <p class="text-lg font-semibold text-gray-900">
+                        {{ reclamo.evento2.nomeEvento }}
+                    </p>
+                    {%endif%}
                 </div>
 
                 <!-- Esito -->
-                <div>
+                <div class="grid grid-cols=1 justify-items-start">
                     <p class="text-sm text-gray-500">Esito verifica</p>
                     {% if reclamo.esito == "Non verificato" %}
-                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-gray-50 text-gray-700 border border-gray-200">
-                        {{ reclamo.esito }}
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-gray-600 text-white border border-gray-700">
+                        ❔ {{ reclamo.esito }}
                     {% elif reclamo.esito == "Accettato" %}
-                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200">
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-600 text-white border border-green-700">
                         ✅ {{ reclamo.esito }}
                     {% elif reclamo.esito == "Rifiutato" %}
-                        <span id="prob_esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-50 text-red-700 border border-red-200">
+                        <span id="prob_esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-600 text-white border border-red-700">
                         ❌ {{ reclamo.esito }}
+                    {% elif reclamo.risolto == True %}
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-blue-600 text-white border border-blue-700">
+                            {{reclamo.esito}}
                     {% else %}
-                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-yellow-50 text-yellow-700 border border-yellow-200">
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-yellow-600 text-white border border-yellow-700">
                         ⚠️ Errore
                     {% endif %}
                 </div>
@@ -99,20 +107,6 @@
                 <p class="text-gray-700 leading-relaxed">
                     {{ reclamo.descrizione }}
                 </p>
-            </div>
-
-            <!-- Selezione valore booleano della verifica -->
-            <div class="p-6 flex justify-end gap-4">
-                
-                <label>
-                    <input type="radio" name="boolReclamo" value="true" checked>
-                    Reclamo vero 
-                    </label>
-                
-                <label> 
-                    <input type="radio" name="boolReclamo" value="false">
-                    Reclamo falso 
-                </label>
             </div>
 
             <!-- Azioni -->
@@ -152,6 +146,46 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script>
 $(document).ready(function () {
+    if({{reclamo.risolto|yesno:"true,false" }}){
+        
+
+        const esitoVerifica = $('#esito_verifica');
+        esitoVerifica.after('<span id="label_calcolo" class="ml-2 text-sm text-gray-600 font-bold">Calcolo delle probabilità in corso' + '</span>');
+        let dots = 0;
+        dotsInterval = setInterval(function() {
+            dots = (dots + 1) % 4; // 0,1,2,3
+            $("#label_calcolo").text("Calcolo delle probabilità in corso" + ".".repeat(dots));
+        }, 500); // cambia ogni 500ms
+
+        $.ajax({
+            url: "{% url 'verifica_reclamo' %}",
+            type: 'POST',
+            headers : {
+            'X-CSRFToken' : "{{ csrf_token }}"
+            },
+            data: {
+                reclamo_id: {{ reclamo.id }},
+            },
+            success: function (response) {
+                clearInterval(dotsInterval);
+                $("#label_calcolo").remove();
+
+                esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento VERO: ' + response.probabilita_vero +'%' + '</span>');
+                esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento FALSO: ' + response.probabilita_falso +'%' + '</span>');
+                
+            },
+            error: function () {
+                clearInterval(dotsInterval);
+                $("#label_calcolo").remove();
+                esitoVerifica
+                    .text('⚠️ Errore nella verifica')
+                    .removeClass()
+                    .addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-600 text-white border border-red-700");
+                    buttonVerifica.removeClass();
+            }
+        });
+    }
+///////////////////////////////////////////////////
     $('#verifica_reclamo_btn').click(function (event) {
         event.preventDefault();
         const buttonVerifica = $('#verifica_reclamo_btn');
@@ -162,8 +196,9 @@ $(document).ready(function () {
             dots = (dots + 1) % 4; // 0,1,2,3
             buttonVerifica.text("Verifica in corso" + ".".repeat(dots));
         }, 500); // cambia ogni 500ms
+        // Mentre effettua il calcolo si disabilita il tasto
+        // sennò si spamma la chiamata a funzione
         buttonVerifica.prop("disabled", true);
-        sceltaUtente = $("input[name='boolReclamo']:checked").val();
         // Qui chiamiamo la rotta che chiama la funzione di verifica del reclamo, la quale ci restituirà un esito e la probabilità
         $.ajax({
             url: "{% url 'verifica_reclamo' %}",
@@ -173,21 +208,22 @@ $(document).ready(function () {
             },
             data: {
                 reclamo_id: {{ reclamo.id }},
-                boolReclamo: sceltaUtente
             },
             success: function (response) {
                 const esitoVerifica = $('#esito_verifica');
                 // Ferma la funzione dei puntini sul bottone di verifica
                     clearInterval(dotsInterval);
 
-                if (response.esito == "Valido"){
+                if (response.esito == "Accettato"){
                     esitoVerifica.text(response.esito);
                     esitoVerifica.removeClass().addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-600 text-white border border-green-700");
-                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-sm text-gray-600  font-bold">Probabilità: ' + response.probabilita +'%' + '</span>');
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento vero: ' + response.probabilita_vero +'%' + '</span>');
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento falso: ' + response.probabilita_falso +'%' + '</span>');
                 } else {
                     esitoVerifica.text(response.esito);
-                    esitoVerifica.removeClass().addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-600 text-white border border-red-700");
-                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-sm text-gray-600 font-bold">Probabilità: ' + response.probabilita +'%' + '</span>');
+                    esitoVerifica.removeClass().addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-600 text-white border border-green-700");
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento vero: ' + response.probabilita_vero +'%' + '</span>');
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-md text-gray-600 font-bold">Probabilità evento falso: ' + response.probabilita_falso +'%' + '</span>');
                 }
                 
                 buttonVerifica.removeClass();
