--- a/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
@@ -75,11 +75,9 @@
                             </td>
                             <td class="px-6 py-4">
                                 {% if reclamo.risolto == True %}
-                                    <span class="px-3 py-1 rounded-full text-sm bg-red-100 text-red-700">Aperto</span>
-                                {% elif reclamo.risolto == False %}
-                                    <span class="px-3 py-1 rounded-full text-sm bg-yellow-100 text-yellow-700">In lavorazione</span>
+                                    <span class="px-3 py-1 rounded-full text-sm bg-green-200 text-green-700 font-bold">Risolto</span>
                                 {% else %}
-                                    <span class="px-3 py-1 rounded-full text-sm bg-green-100 text-green-700">Risolto</span>
+                                    <span class="px-3 py-1 rounded-full text-sm bg-yellow-100 text-yellow-700">In lavorazione</span>
                                 {% endif %}
                             </td>
                             <td class="px-6 py-4 text-right space-x-2">
