--- a/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
@@ -82,7 +82,7 @@
                             </td>
                             <td class="px-6 py-4 text-right space-x-2">
                                 <a href="{% url 'gestisci_reclamo' reclamo.id %}">
-                                   <button class="bg-green-600 text-white px-3 py-1 rounded-lg hover:bg-green-700 transition text-xs font-semibold">
+                                   <button class="bg-green-600 text-white px-5 py-2 rounded-lg hover:bg-green-700 transition text-md font-semibold">
                                     Visualizza
                                     </button>
                                 </a>
