--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -37,20 +37,21 @@
 
             <!-- TIPO RECLAMO -->
             <div class="mb-6">
-                <label class="block text-sm font-semibold mb-2">
+                <label class="block text-md font-semibold mb-2">
                     Tipo di reclamo
                 </label>
                 <select name="nomeReclamo" required
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
-                    <option value="">Seleziona un tipo di reclamo</option>
+                    <option value="">--- Seleziona un tipo di reclamo ---</option>
                     <option value="Spedizione non effettuata correttamente">Spedizione non effettuata correttamente</option>
                     <option value="Ritardo di consegna">Ritardo di consegna</option>
+                    <option value="Pagamento fallito">Problema di pagamento</option>
                 </select>
             </div>
 
             <!-- DESCRIZIONE -->
             <div class="mb-6">
-                <label class="block text-sm font-semibold mb-2">
+                <label class="block text-md font-semibold mb-2">
                     Descrizione del reclamo
                 </label>
                 <textarea name="descrizione" rows="5" required maxlenght="500"
